# hodei-diagrams

./: .gitignore  .tool-versions  AGENTS.md  CONTEXT.md  Cargo.toml  DESIGN.md  Draw.io-Código-Abierto.md  justfile
.atl/: skill-registry.md
.githooks/: README.md  pre-commit
.github/workflows/: web-shell-e2e.yml
crates/diagram-bench/: Cargo.toml
crates/diagram-commands/: Cargo.toml
crates/diagram-commands/src/: command.rs  editor.rs  error.rs  history.rs  lib.rs  payload.rs  selection.rs  selection_service.rs
crates/diagram-commands/tests/: editor_workflow.rs  integration_group_label_page.rs  integration_port_label.rs  integration_z_order.rs  set_page_math_enabled.rs  undo_remove_page.rs
crates/diagram-compat-testkit/: Cargo.toml
crates/diagram-compat-testkit/fixtures/: dangling-edge.drawio  edge-connect.drawio  edge-with-waypoints.drawio  empty-page.drawio  group-nested.drawio  image-datauri.drawio  image-url.drawio  locked-and-hidden.drawio  metadata-vars.drawio  multi-segment-style.drawio  orthogonal-multi-bend.drawio  orthogonal-single-bend.drawio  orthogonal-straight.drawio  simple-rect.drawio  swimlane-flat.drawio  swimlane-pool-lane.drawio  three-vertices-z-ordered.drawio  two-pages.drawio  vertex-rect.drawio
crates/diagram-compat-testkit/fixtures/hit-stack/: locked-group.drawio  nested-groups.drawio
crates/diagram-compat-testkit/fixtures/tree/: balanced-7.drawio  chain-3.drawio  cycle-3.drawio  deep-20.drawio  group-with-children.drawio  imbalanced-6.drawio  left-to-right-4.drawio  multiple-parents.drawio  multiple-roots.drawio  no-root.drawio  wide-9.drawio
crates/diagram-compat-testkit/src/: corpus.rs  diagnostics.rs  golden.rs  lib.rs  roundtrip.rs
crates/diagram-compat-testkit/tests/: image_roundtrip.rs  math_roundtrip.rs  routing_golden.rs  tree_layout_golden.rs
crates/diagram-compat-testkit/tests/fixtures/: math-enabled.drawio
crates/diagram-core/: Cargo.toml
crates/diagram-core/src/: edge.rs  error.rs  geometry.rs  group.rs  id.rs  label.rs  layer.rs  lib.rs  model.rs  page.rs  selection.rs  store.rs  style.rs  vertex.rs
crates/diagram-core/tests/: id_serde.rs  label_invariant.rs  page_default.rs
crates/diagram-format-drawio/: Cargo.toml
crates/diagram-format-drawio/src/: error.rs  lib.rs  mapping.rs  parser.rs  raw.rs  writer.rs
crates/diagram-format-drawio/tests/: adversarial_math.rs  integration_background.rs  integration_layer.rs  math_flag.rs
crates/diagram-layout/: Cargo.toml
crates/diagram-layout/src/: circular.rs  config.rs  coordinate_assignment.rs  crossing_reduction.rs  cycle_removal.rs  error.rs  grid.rs  hierarchy.rs  layer_assignment.rs  lib.rs  organic.rs  tree.rs
crates/diagram-layout/tests/: circular_dispatch.rs  golden_tests.rs  hierarchical_dispatch.rs
crates/diagram-layout/tests/fixtures/: cycle.drawio  diamond.drawio  disconnected.drawio  empty-page.drawio  simple-hierarchy.drawio  single-vertex.drawio
crates/diagram-render-svg/: Cargo.toml
crates/diagram-render-svg/benches/: culling.rs
crates/diagram-render-svg/src/: clip.rs  defs.rs  element.rs  error.rs  escape.rs  lib.rs  renderer.rs  style.rs
crates/diagram-render-svg/tests/: culling.rs  e2e.rs  groups_and_paths.rs  integration_curved.rs  leaf_primitives.rs  math_placeholder.rs  multi_page_and_style.rs
crates/diagram-render-wgpu/: Cargo.toml
crates/diagram-render-wgpu/src/: buffers.rs  context.rs  error.rs  lib.rs  pipeline.rs  renderer.rs  shapes.rs
crates/diagram-render-wgpu/tests/: scene_to_instances.rs  visual_regression.rs
crates/diagram-routing/: Cargo.toml
crates/diagram-routing/src/: bend.rs  error.rs  lib.rs  orth.rs  perimeter.rs  port.rs  segment.rs
crates/diagram-routing/tests/: integration_bend.rs
crates/diagram-scene/: Cargo.toml
crates/diagram-scene/src/: builder.rs  cull.rs  element.rs  error.rs  hit_tester.rs  lib.rs  resolver.rs  scene.rs  stencil_provider.rs  stencil_registry.rs
crates/diagram-scene/tests/: golden_scenes.rs  integration_arrowheads.rs  integration_path_element.rs  page_scene_math.rs
crates/diagram-stencils/: Cargo.toml
crates/diagram-stencils/fixtures/: general.xml
crates/diagram-stencils/src/: error.rs  lib.rs  parse.rs
crates/diagram-wasm/: Cargo.toml
crates/diagram-wasm/src/: buffer.rs  commands.rs  engine.rs  export.rs  import.rs  layers.rs  layout.rs  lib.rs  metadata.rs  render.rs  scene.rs  stencil.rs  types.rs
crates/diagram-wasm/tests/: wasm_native.rs
docs/: ROADMAP.md  drawio-user-interaction-workflows.md
docs/adr/: 0001-semantic-port-with-drawio-compatibility.md  0002-typescript-web-shell-rust-engine.md  0003-svg-first-render-backend-webgpu-later.md  0004-minimal-wasm-boundary-with-shared-buffers.md  0005-command-driven-engine-not-literal-redux-store.md  0006-behavior-first-study-upstream-second.md  0007-v1-targets-solid-basic-to-medium-compatibility.md  0008-import-drawio-before-rich-authoring.md  0009-rust-native-model-with-drawio-mapping.md  0010-foundational-crate-matrix-by-layer.md  0011-multicrate-workspace-with-hexagonal-boundaries.md  0012-separate-core-from-commands-and-keep-web-outside-crates.md  0013-keep-layout-and-routing-outside-diagram-core.md  0014-drawio-format-depends-only-on-diagram-core.md  0015-renderers-consume-scene-not-core-model.md  0016-diagram-scene-as-separate-projection-crate.md  0017-diagram-wasm-as-thin-technical-adapter.md  0018-create-a-shared-compatibility-testkit-early.md  0019-bootstrap-with-core-format-and-compat-testkit.md  0020-core-model-starts-with-pages-groups-styles-and-labels.md  0021-start-styles-as-flexible-map-then-type-gradually.md  0022-model-labels-as-potentially-rich-content.md  0023-use-engine-owned-stable-ids-with-external-id-mapping.md  0024-preserve-unknown-when-safe-degrade-explicitly.md  0025-add-compatibility-diagnostics-from-bootstrap.md  0026-parse-drawio-into-raw-model-before-domain-mapping.md  (+40 more)
scripts/: check-regressions.sh
web-shell/: .gitignore  README.md  eslint.config.js  index.html  package-lock.json  package.json  playwright.config.ts  tsconfig.json  vite.config.ts  vitest.config.ts
(+225 files in other folders)
