[workspace]
resolver = "2"
members = [
    "crates/diagram-core",
    "crates/diagram-format-drawio",
    "crates/diagram-compat-testkit",
    "crates/diagram-commands",
    "crates/diagram-scene",
    "crates/diagram-render-svg",
    "crates/diagram-wasm",
    "crates/diagram-routing",
    "crates/diagram-layout",
    "crates/diagram-render-wgpu",
    "crates/diagram-stencils",
    "crates/diagram-bench",
]

[workspace.package]
version = "0.69.0"
edition = "2024"
rust-version = "1.85"
license = "MIT OR Apache-2.0"
repository = "https://github.com/hodei-diagrams/hodei-diagrams"

[workspace.dependencies]
# Diagram core foundations
thiserror = "2.0"
serde = { version = "1", features = ["derive"] }
slotmap = { version = "1.0", features = ["serde"] }
smallvec = "1"
bitflags = "2"
chrono = { version = "0.4", default-features = false, features = ["serde", "clock"] }

# .drawio format crate
quick-xml = "0.40"
flate2 = "1"
base64 = "0.22"

# Compatibility testkit
similar = "2"
walkdir = "2"
ignore = "0.4"

# Layout
petgraph = "0.8"

# Routing
rstar = "0.13"
pathfinding = "4.15"

# WASM adapter
wasm-bindgen = "0.2"
slab = "0.4"

[profile.release]
lto = false
codegen-units = 1

# Dev profile optimized for fast compile/test cycles
[profile.dev]
opt-level = 0
debug = false
split-debuginfo = "unpacked"
incremental = true
codegen-units = 16

[profile.dev.build-override]
opt-level = 0
codegen-units = 16
debug = false