[package]
name = "diagram-commands"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
diagram-core = { path = "../diagram-core" }
diagram-format-drawio = { path = "../diagram-format-drawio" }
diagram-routing = { path = "../diagram-routing" }
thiserror = { workspace = true }
serde = "1"
chrono = { workspace = true }
