[package]
name = "diagram-compat-testkit"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Shared compatibility testkit: corpus, round-trip helpers, golden files, compatibility assertions."

[dependencies]
diagram-core = { path = "../diagram-core" }
diagram-format-drawio = { path = "../diagram-format-drawio" }
diagram-routing = { path = "../diagram-routing" }
diagram-layout = { path = "../diagram-layout" }
thiserror = { workspace = true }
serde = { workspace = true }
similar = { workspace = true }
walkdir = { workspace = true }
ignore = { workspace = true }

[lints.rust]
unsafe_code = "forbid"