[package]
name = "diagram-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Diagram Engine core: domain model, slotmap stores, geometry, styles, labels."

[dependencies]
thiserror = { workspace = true }
serde = { workspace = true }
slotmap = { workspace = true, features = ["serde"] }
smallvec = { workspace = true }
bitflags = { workspace = true }
chrono = { workspace = true }

[dev-dependencies]
serde_json = "1"

[lints.rust]
unsafe_code = "forbid"