[package]
name = "diagram-format-drawio"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Parser and writer for .drawio XML format. Depends only on diagram-core."

[dependencies]
diagram-core = { path = "../diagram-core" }
thiserror = { workspace = true }
serde = { workspace = true }
quick-xml = { workspace = true }
flate2 = { workspace = true }
base64 = { workspace = true }

[lints.rust]
unsafe_code = "forbid"