[package]
name = "diagram-layout"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Diagram layout algorithms (Sugiyama HierarchicalLayout v1)."

[dependencies]
diagram-core = { path = "../diagram-core" }
petgraph = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
diagram-format-drawio = { path = "../diagram-format-drawio" }

[lints.rust]
unsafe_code = "forbid"
