[package]
name = "diagram-render-svg"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

description = "SVG rendering backend for the Hodei diagram engine."

[dependencies]
diagram-core = { path = "../diagram-core" }
diagram-scene = { path = "../diagram-scene" }
serde = { workspace = true }
serde_json = "1"

[dev-dependencies]
diagram-format-drawio = { path = "../diagram-format-drawio" }

[lints.rust]
unsafe_code = "forbid"
