[package]
name = "diagram-render-svg"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

description = "SVG rendering backend for the Hodei diagram engine."

[dependencies]
diagram-core = { path = "../diagram-core" }
diagram-scene = { path = "../diagram-scene" }

[dev-dependencies]
diagram-format-drawio = { path = "../diagram-format-drawio" }
slotmap = "1.1"
criterion = { version = "0.5", default-features = false }

[[bench]]
name = "culling"
harness = false

[lints.rust]
unsafe_code = "forbid"
