[package]
name = "diagram-scene"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Render-agnostic projection layer for the Diagram Engine. Depends only on diagram-core."

[dependencies]
diagram-core = { path = "../diagram-core" }
thiserror = { workspace = true }

[lints.rust]
unsafe_code = "forbid"
