[package]
name = "diagram-scene"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Render-agnostic projection layer for the Diagram Engine. Depends only on diagram-core."

[dependencies]
diagram-core = { path = "../diagram-core" }
diagram-stencils = { path = "../diagram-stencils" }
thiserror = { workspace = true }
serde = "1"

[lints.rust]
unsafe_code = "forbid"
